not finish , I will finish it leter

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       </script>
 </head>
 <body>
-    
+    <section>
+      <div>
+        <h1 class="text-5xl font-bold uppercase">
+          <span class="text-yellow-500 block">Be The Penguin</span>
+          <span class="text-">of Winter</span>
+        </h1>
+      </div>
+    </section>
 </body>
 </html>
