--- a/index.html
+++ b/index.html
@@ -1,31 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Penguin Fashion</title>
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/7ba9e23631.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Penguin Fashion</title>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
           }
         }
-      </script>
+      }
+    }
+  </script>
 </head>
-<body>
-    <section>
-      <div>
+
+<body class="container mx-auto px-4">
+  <header>
+    <div class="grid grid-cols-2 h-16">
+      <div class="my-auto">
+        <img class="w-56 " src="icons/Group 33072.png" alt="" srcset="">
+      </div>
+      <div class="m-auto">
+        <nav>
+          <a class="font-bold text-sm mx-2" href="">HOME</a>
+          <a class="font-bold text-sm mx-2" href="">PRODUCT</a>
+          <a class="font-bold text-sm mx-2" href="">ABOUT US</a>
+          <a class="font-bold text-sm mx-2" href="">CONTACT US</a>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <section class="mb-12 ">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 ">
+      <div class="my-auto">
         <h1 class="text-5xl font-bold uppercase">
-          <span class="text-yellow-500 block">Be The Penguin</span>
+          <span class="text-yellow-500 block my-6">Be The Penguin</span>
           <span class="text-">of Winter</span>
         </h1>
+        <p class="font-semibold my-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore veritatis unde
+          deserunt quae id illo.</p>
+        <div class="flex justify-between items-center">
+          <h2 class="text-amber-500 font-bold text-3xl">$145</h2>
+          <input class="bg-slate-300 p-3 rounded-lg " placeholder="ENTER CUPON" type="text">
+          <button class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
+              class="fa-solid fa-cart-arrow-down"></i> BUY NOW</button>
+
+        </div>
       </div>
-    </section>
+
+      <div class="">
+        <img class="w-10/12" src="images/model.png" alt="">
+      </div>
+    </div>
+
+
+  </section>
+
+  <section class="my-12">
+    <h2 class="text-3xl font-extrabold my-6 text-green-900">MAN JACKET</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+
+      <div class="shadow-xl rounded-xl">
+        <div class=" m-5 bg-slate-200 py-8 rounded-xl">
+          <img class="w-11/12 h-4/6 m-auto " src="images/jacket-4.png" alt="">
+        </div>
+        <div class="m-5 ">
+          <h4 class="font-semibold text-2xl">Snowboard Jacket Mens</h4>
+          <p class="my-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, delectus!</p>
+          <div class="flex justify-between items-center">
+            <h2 class="text-amber-500 font-bold text-3xl">$145</h2>
+            <button class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
+                class="fa-solid fa-cart-arrow-down"></i> BUY NOW</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="shadow-xl rounded-xl">
+        <div class=" m-5 bg-slate-200 py-8 rounded-xl">
+          <img class="w-11/12 h-4/6 m-auto " src="images/jacket-4.png" alt="">
+        </div>
+        <div class="m-5 ">
+          <h4 class="font-semibold text-2xl">Snowboard Jacket Mens</h4>
+          <p class="my-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, delectus!</p>
+          <div class="flex justify-between items-center">
+            <h2 class="text-amber-500 font-bold text-3xl">$145</h2>
+            <button class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
+                class="fa-solid fa-cart-arrow-down"></i> BUY NOW</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="shadow-xl rounded-xl">
+        <div class=" m-5 bg-slate-200 py-8 rounded-xl">
+          <img class="w-11/12 h-4/6 m-auto " src="images/jacket-4.png" alt="">
+        </div>
+        <div class="m-5 ">
+          <h4 class="font-semibold text-2xl">Snowboard Jacket Mens</h4>
+          <p class="my-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, delectus!</p>
+          <div class="flex justify-between items-center">
+            <h2 class="text-amber-500 font-bold text-3xl">$145</h2>
+            <button class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
+                class="fa-solid fa-cart-arrow-down"></i> BUY NOW</button>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <section class="my-12 ">
+    <h2 class="text-3xl font-extrabold my-6 text-green-900">MAN JACKET</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+
+      <div class="shadow-xl rounded-xl">
+        <div class=" m-5 bg-slate-200 py-8 rounded-xl">
+          <img class="w-11/12 h-4/6 m-auto " src="images/jacket-4.png" alt="">
+        </div>
+        <div class="m-5 ">
+          <h4 class="font-semibold text-2xl">Snowboard Jacket Mens</h4>
+          <p class="my-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, delectus!</p>
+          <div class="flex justify-between items-center">
+            <h2 class="text-amber-500 font-bold text-3xl">$145</h2>
+            <button class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
+                class="fa-solid fa-cart-arrow-down"></i> BUY NOW</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="shadow-xl rounded-xl">
+        <div class=" m-5 bg-slate-200 py-8 rounded-xl">
+          <img class="w-11/12 h-4/6 m-auto " src="images/jacket-4.png" alt="">
+        </div>
+        <div class="m-5 ">
+          <h4 class="font-semibold text-2xl">Snowboard Jacket Mens</h4>
+          <p class="my-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, delectus!</p>
+          <div class="flex justify-between items-center">
+            <h2 class="text-amber-500 font-bold text-3xl">$145</h2>
+            <button class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
+                class="fa-solid fa-cart-arrow-down"></i> BUY NOW</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="shadow-xl rounded-xl">
+        <div class=" m-5 bg-slate-200 py-8 rounded-xl">
+          <img class="w-11/12 h-4/6 m-auto " src="images/jacket-4.png" alt="">
+        </div>
+        <div class="m-5 ">
+          <h4 class="font-semibold text-2xl">Snowboard Jacket Mens</h4>
+          <p class="my-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, delectus!</p>
+          <div class="flex justify-between items-center">
+            <h2 class="text-amber-500 font-bold text-3xl">$145</h2>
+            <button class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
+                class="fa-solid fa-cart-arrow-down"></i> BUY NOW</button>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 </body>
+
 </html>
