--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <p class="font-semibold my-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore veritatis unde
           deserunt quae id illo.</p>
         <div class="flex justify-between items-center">
-          <h2 class="text-amber-500 font-bold text-3xl">$145</h2>
-          <input class="bg-slate-300 p-3 rounded-lg " placeholder="ENTER CUPON" type="text">
-          <button class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
+          <h2 class="text-amber-500 font-bold text-3xl">$<span id="price">145</span></h2>
+          <input id="cupon" class="bg-slate-300 p-3 rounded-lg " placeholder="ENTER CUPON" type="text">
+          <button id="cupon-btn" class="px-4 py-3 rounded-md hover:bg-yellow-500 bg-lime-600 font-bold text-white"><i
               class="fa-solid fa-cart-arrow-down"></i> BUY NOW</button>
 
         </div>
@@ -167,6 +167,8 @@
 
     </div>
   </section>
+
+  <script src="copon.js"></script>
 </body>
 
 </html>
